@@ -10,6 +10,7 @@ HEAD
 
 	Ignores new (5.8) magic CLONE and CLONE_SKIP methods. (rt #17489)
 
+	Added a nonwhitespace option (Alex - rt #14950)
 
 
 0.17	Tuesday 23rd November, 2004
